2017-11-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Wrong MaxMap check condition - fixed.

2017-11-04  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Check for InsertRow() return value.

2017-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/export.c: Add not-null check for indexes pointer where
	needed.

	* magick/import.c: Add not-null check for indexes pointer with
	associated exception report where the indexes pointer is needed.
	(ImportCMYKQuantumType): Was wrongly importing an opacity channel
	in some cases. Would have crashed if these cases were ever used.

	* coders/wpg.c (ReadWPGImage): Assure that colormapped image is a
	PseudoClass type with valid colormapped indexes.  Fixes
	SourceForge bug 519 "Null Pointer Dereference (Write) with
	malformed WPG Image".

	* coders/sfw.c (ReadSFWImage): Avoid possible heap overflow while
	copying JFIF magic into buffer. Reject runt files.  Fixes
	CVE-2017-12983.  Notified of problem via email from Petr Gajdos on
	Thu, 2 Nov 2017.

2017-10-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix SourceForge bug #517 "Push
	operations in DrawImage can lead to negative strncpy when looking
	for pop".  Interestingly, valgrind and ASAN only detected a
	problem with one of the test cases since exercised code which
	updated an array using the index.  It appears that Linux strncpy()
	simply ignores the bad request.

2017-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Make sure that a reasonable
	exception is reported to the user when there is a read failure.

2017-10-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Reject JNG files with
	unreasonable dimensions given the file size.

2017-10-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Fix SourceForge bug #518 "Null
	pointer in".  Also make sure that errors are reported properly due