@@ -120,18 +120,16 @@ static unsigned char *SFWScan(const unsigned char *p,const unsigned char *q,
   register size_t
     i;
 
-  if (p+length < q)
+  while ((p+length) < q)
     {
-      while( p < q )
-	{
-	  for (i=0; i < length; i++)
-	    if (p[i] != target[i])
-	      break;
-	  if (i == length)
-	    return((unsigned char *) p);
-	  p++;
-	}
+      for (i=0; i < length; i++)
+        if (p[i] != target[i])
+          break;
+      if (i == length)
+        return((unsigned char *) p);
+      p++;
     }
+
   return((unsigned char *) NULL);
 }
 
